best-practices/disallow-default-namespace/.chainsaw-test/job-default.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: bad-job
  namespace: default
spec:
  template:
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
        command:
        - "sleep"
        - "3000"
      restartPolicy: Never
